Update the index files

--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -161,6 +161,6 @@
     </script>
     {% endif %}
 
-    <script src="../static/js/script.js"></script>
+    <script src="{% static 'js/script.js' %}"></script>
   </body>
 </html>
