--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -140,7 +140,22 @@
         <p>Copyright &copy; Manotosh Mandal <span id="datee"></span>, All rights reserved</p>
       </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    {% if messages %}
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+      <script>
+        document.addEventListener("DOMContentLoaded", function () {
+          {% for message in messages %}
+            Swal.fire({
+              icon: "{% if message.tags == 'success' %}success{% elif message.tags == 'error' %}error{% else %}info{% endif %}",
+              title: "{{ message|escapejs }}",
+              showConfirmButton: false,
+              timer: 3000
+            });
+          {% endfor %}
+        });
+      </script>
+      {% endif %}
+
     <script src="{% static 'js/script.js' %}"></script>
   
 
