--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -150,13 +150,15 @@
               icon: "{% if message.tags == 'success' %}success{% elif message.tags == 'error' %}error{% else %}info{% endif %}",
               title: "{{ message|escapejs }}",
               showConfirmButton: false,
-              timer: 3000,
+              timer: 3000
             });
           {% endfor %}
         });
       </script>
       {% endif %}
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/
     <script src="{% static 'js/script.js' %}?v=20250730"></script>
 
   
