--- a/portfolio/static/BloggPage/bstyle.css
+++ b/portfolio/static/BloggPage/bstyle.css
@@ -154,6 +154,8 @@ header {
   }
   .blogs{
     justify-content: center;
+    align-items: center;
+    margin-right: 1rem;
   }
 
   .blog .overlay {
